--- a/Soberide/Base.lproj/Main.storyboard
+++ b/Soberide/Base.lproj/Main.storyboard
@@ -18,13 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome, user!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tU7-eV-aD7">
-                                <rect key="frame" x="16" y="65" width="343" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="your driver for the night is " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwd-26-coe">
                                 <rect key="frame" x="41" y="163" width="292" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -62,6 +55,28 @@
                                     <action selector="logout:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iPG-Qt-gB6"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iYe-Ri-HMh">
+                                <rect key="frame" x="116" y="554" width="130" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Chat with Driver"/>
+                                <connections>
+                                    <segue destination="aYX-yG-McZ" kind="show" identifier="toChat" id="Un9-3L-z7e"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66z-Fr-0pZ">
+                                <rect key="frame" x="192" y="75" width="243" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello, " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tU7-eV-aD7">
+                                <rect key="frame" x="74" y="65" width="149" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -69,6 +84,7 @@
                     <connections>
                         <outlet property="nameLabel" destination="BJK-mI-ZMt" id="48c-aL-oK1"/>
                         <outlet property="phoneLabel" destination="fz1-yU-dPL" id="VLB-um-bIH"/>
+                        <outlet property="usernameLabel" destination="66z-Fr-0pZ" id="7Ym-1F-8bc"/>
                         <segue destination="fGb-NY-jzR" kind="unwind" identifier="logoutFromUser" unwindAction="unwindToLoginWithSegue:" id="PcG-lo-b9G"/>
                     </connections>
                 </viewController>
@@ -77,20 +93,20 @@
             </objects>
             <point key="canvasLocation" x="685.60000000000002" y="-524.8875562218891"/>
         </scene>
-        <!--chatView-->
-        <scene sceneID="sEK-z2-Ut5">
+        <!--Chat View-->
+        <scene sceneID="dQ4-zn-XNJ">
             <objects>
-                <viewController title="chatView" id="o3E-r1-l8f" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="KBG-U1-xQm">
+                <viewController id="aYX-yG-McZ" customClass="chatView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Is5-ys-no7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="d7Y-03-3rT"/>
+                        <viewLayoutGuide key="safeArea" id="lSg-wK-Ub1"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5cz-FG-hm7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iTg-5B-o0x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1692" y="-965"/>
+            <point key="canvasLocation" x="1692" y="-944"/>
         </scene>
         <!--mapView-->
         <scene sceneID="IJX-ZA-vzS">
