--- a/Soberide/Base.lproj/Main.storyboard
+++ b/Soberide/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jd7-oL-a8U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="br2-cO-rMg">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -137,6 +137,22 @@
             </objects>
             <point key="canvasLocation" x="1692" y="-211"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CF2-dk-bCZ">
+            <objects>
+                <navigationController id="br2-cO-rMg" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tIe-dK-3Jr">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Jd7-oL-a8U" kind="relationship" relationship="rootViewController" id="3wB-8n-tW7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BD0-xD-bs1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1398" y="47"/>
+        </scene>
         <!--ViewController-->
         <scene sceneID="98M-SN-BT8">
             <objects>
@@ -216,6 +232,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Xjt-XG-bn4"/>
                     </view>
+                    <navigationItem key="navigationItem" id="xVn-A5-9Of"/>
                     <connections>
                         <outlet property="passwordText" destination="Pk2-zM-Kzb" id="Cop-FE-BbB"/>
                         <outlet property="usernameText" destination="wEA-E0-x0n" id="EEm-Ga-O1V"/>
