--- a/Soberide/Base.lproj/Main.storyboard
+++ b/Soberide/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--UserView-->
+        <!--Driver Information-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="UserView" id="BYZ-38-t0r" customClass="UserView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Driver Information" id="BYZ-38-t0r" customClass="UserView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -93,10 +93,10 @@
             </objects>
             <point key="canvasLocation" x="685.60000000000002" y="-524.8875562218891"/>
         </scene>
-        <!--Chat View-->
+        <!--Chat-->
         <scene sceneID="dQ4-zn-XNJ">
             <objects>
-                <viewController id="aYX-yG-McZ" customClass="chatView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Chat" id="aYX-yG-McZ" customClass="chatView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Is5-ys-no7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -108,10 +108,10 @@
             </objects>
             <point key="canvasLocation" x="1692" y="-944"/>
         </scene>
-        <!--mapView-->
+        <!--Map-->
         <scene sceneID="IJX-ZA-vzS">
             <objects>
-                <viewController title="mapView" id="n5t-6Y-bRZ" customClass="MapView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Map" id="n5t-6Y-bRZ" customClass="MapView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="biC-4w-fQe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -245,10 +245,10 @@
             </objects>
             <point key="canvasLocation" x="-314.39999999999998" y="47.226386806596707"/>
         </scene>
-        <!--registerUserView-->
+        <!--User Registration-->
         <scene sceneID="gjS-R7-PCA">
             <objects>
-                <viewController title="registerUserView" id="DiU-jR-cY8" customClass="RegisterUserView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="User Registration" id="DiU-jR-cY8" customClass="RegisterUserView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0B6-Yj-xRZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -299,10 +299,10 @@
             </objects>
             <point key="canvasLocation" x="-1101.5999999999999" y="809.14542728635683"/>
         </scene>
-        <!--RegisterGroupView-->
+        <!--Group Registration-->
         <scene sceneID="XJD-7h-3k3">
             <objects>
-                <viewController title="RegisterGroupView" id="rtY-29-YGx" customClass="RegisterGroupView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Group Registration" id="rtY-29-YGx" customClass="RegisterGroupView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hLA-rE-MGn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -356,10 +356,10 @@
             </objects>
             <point key="canvasLocation" x="-314" y="809"/>
         </scene>
-        <!--AdminView-->
+        <!--Calendar -->
         <scene sceneID="EER-lW-CSw">
             <objects>
-                <viewController title="AdminView" id="ypJ-bi-vda" customClass="AdminView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Calendar " id="ypJ-bi-vda" customClass="AdminView" customModule="Soberide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gv9-01-G64">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -369,7 +369,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yvt-vm-X2c">
-                                <rect key="frame" x="0.0" y="147" width="375" height="520"/>
+                                <rect key="frame" x="0.0" y="147" width="375" height="323"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VNe-9K-EOg">
@@ -389,16 +389,9 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M9m-eA-WSj">
-                                <rect key="frame" x="0.0" y="64" width="375" height="75"/>
+                                <rect key="frame" x="0.0" y="64" width="419" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Default Month" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLR-cw-5je">
-                                        <rect key="frame" x="53" y="23" width="270" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6c-03-Qnl">
                                         <rect key="frame" x="8" y="18" width="46" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -408,21 +401,36 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SBp-u0-YKZ">
-                                        <rect key="frame" x="321" y="18" width="46" height="30"/>
+                                        <rect key="frame" x="331" y="18" width="46" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Next"/>
                                         <connections>
                                             <action selector="Nextbtn:" destination="ypJ-bi-vda" eventType="touchUpInside" id="hic-Bw-vUi"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Default Month" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLR-cw-5je">
+                                        <rect key="frame" x="62" y="23" width="270" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.46105291469999998" blue="0.30926565480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cac-UU-Pm8">
+                                <rect key="frame" x="69" y="469" width="254" height="144"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="jvE-gU-JeC"/>
                     </view>
                     <connections>
+                        <outlet property="howToText" destination="Cac-UU-Pm8" id="No5-ry-oSn"/>
                         <outlet property="monthlbl" destination="MLR-cw-5je" id="Dgw-0F-e6h"/>
                         <outlet property="myCollectionView" destination="yvt-vm-X2c" id="sGS-uc-7vR"/>
                         <segue destination="bxQ-kZ-Jdy" kind="unwind" identifier="logoutFromAdmin" unwindAction="unwindToLoginWithSegue:" id="6HG-21-f8l"/>
