--- a/Soberide/Base.lproj/Main.storyboard
+++ b/Soberide/Base.lproj/Main.storyboard
@@ -311,38 +311,44 @@
                                 <rect key="frame" x="0.0" y="84" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select School" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4PB-7f-1pw">
-                                <rect key="frame" x="87" y="71" width="200" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Be sure to spell accurately!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ctT-6T-PJF">
-                                <rect key="frame" x="43" y="381" width="288" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Be sure to spell accurately!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ctT-6T-PJF">
+                                <rect key="frame" x="89" y="381" width="196" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name of Organization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aA8-Zb-J0g">
-                                <rect key="frame" x="98" y="344" width="178" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of Organization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aA8-Zb-J0g">
+                                <rect key="frame" x="103.5" y="344" width="167" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQy-j8-wG3">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQy-j8-wG3">
                                 <rect key="frame" x="76" y="550" width="223" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <state key="normal" title="Register School"/>
                                 <connections>
                                     <action selector="finishRegistration:" destination="rtY-29-YGx" eventType="touchUpInside" id="4Te-fS-UdE"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select School" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4PB-7f-1pw">
+                                <rect key="frame" x="134.5" y="74" width="105" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YQy-j8-wG3" firstAttribute="top" secondItem="SEL-Bh-gXW" secondAttribute="top" constant="486" id="8Nr-hp-z4v"/>
+                            <constraint firstItem="ctT-6T-PJF" firstAttribute="centerX" secondItem="SEL-Bh-gXW" secondAttribute="centerX" id="Bbc-uE-2Zs"/>
+                            <constraint firstItem="4PB-7f-1pw" firstAttribute="top" secondItem="SEL-Bh-gXW" secondAttribute="top" constant="10" id="GvV-6K-xbl"/>
+                            <constraint firstItem="ctT-6T-PJF" firstAttribute="top" secondItem="SEL-Bh-gXW" secondAttribute="top" constant="317" id="Msn-5J-4bp"/>
+                            <constraint firstItem="4PB-7f-1pw" firstAttribute="centerX" secondItem="SEL-Bh-gXW" secondAttribute="centerX" id="U11-dx-d9X"/>
+                            <constraint firstItem="aA8-Zb-J0g" firstAttribute="top" secondItem="SEL-Bh-gXW" secondAttribute="top" constant="280" id="UYB-3n-fP8"/>
+                            <constraint firstItem="YQy-j8-wG3" firstAttribute="centerX" secondItem="SEL-Bh-gXW" secondAttribute="centerX" id="bWD-vf-GhY"/>
+                            <constraint firstItem="aA8-Zb-J0g" firstAttribute="centerX" secondItem="SEL-Bh-gXW" secondAttribute="centerX" id="uvO-1Y-iMB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="SEL-Bh-gXW"/>
                     </view>
                     <connections>
